3.0.0/functional/jde.adoc
= *Atina JD Edwards Connector for Mule 4 - User Guide*
:keywords: add_keywords_separated_by_commas
:imagesdir: images
:toc: macro
:toclevels: 2
:source-highlighter: highlightjs

toc::[]

== *Introduction*

This document provides a comprehensive guide to the MuleSoft Connector for Atina JDE Microservices. It is intended for integration developers and system architects responsible for configuring, deploying, and maintaining integrations between MuleSoft™ and Oracle JD Edwards EnterpriseOne™ using Atina’s microservice-based architecture.

Unlike traditional approaches that rely on legacy libraries or complex setups, this connector simplifies the interaction with JD Edwards by leveraging a modern, containerized middleware that exposes a gRPC-based API. The connector encapsulates the complexity of JD Edwards integration and allows Mule applications to seamlessly:
After reading this guide, you should be able to accomplish the following scenarios:

. Log into _JD Edwards EnterpriseOne™_
. Invoke Web Services (WS) on the server by passing it parameters.
. Invoke a Business Function (BSFN) on the server by passing it parameters.
. Invoke a Business Function (BSFN) on the server using Transaction Processing.
. Invoke a UBE by name.
. Check a UBE call’s status asynchronously.
. MBF Poll Events.
. Log out.

image::atina_connector_images/jde_01_arch.png[image]

At design time, the _JDE Atina Connector_ allows you to discover BSFN functions, Web Services by name providing full access to all Business Function and Web Services signatures. Given that discovery is a heavy duty process, the Connector manages a cache repository for all function’s metadata used at least once.

The results of a function call will be injected into the flow as a Map containing key-value pairs with the invocation’s output values. This approach gives the end user freedom of choice to construct complex flows and manage custom exception strategies.

=== Prerequisites

This document assumes that the reader has prior knowledge and access to the following technologies and tools:

* Basic understanding of _JD Edwards EnterpriseOne™_ concepts (e.g., BSFNs, UBEs, orchestration, data structures).

* Familiarity with MuleSoft development, particularly using link:++https://docs.mulesoft.com/anypoint-studio/v/6/download-and-launch-anypoint-studio[Anypoint™ Studio]++[Anypoint Studio] for building and deploying integration flows.

=== Requirements

* *Mule 4.6 Server Runtime* or higher
* *Java JDK* 1.8, 11 or 17
* https://docs.mulesoft.com/anypoint-studio/latest/[*AnyPoint Studio™* 7.x or higher]
* https://maven.apache.org/download.cgi[*Maven*] 3.9.6 or higher (do not use the embedded Maven for AnyPoint Studio)
* *Atina JDE Microservices*: The connector requires access to the Atina JDE Microservices deployed in the target network. Ensure the service is reachable (credentials provided).

See the <<jdeatina#,Atina JDE Microservices Manual>> for detailed setup and deployment instructions.

== *Preliminary Setup*

Before using the Atina JDE Connector in your MuleSoft projects, some initial configuration is required.

This includes configuring your Maven settings to access the private repository, and installing the license required by the connector.

=== Preparing Maven for Atina JDE Connector

. To download the connector and its dependencies, you must add credentials to your Maven settings.xml file (typically located at ~/.m2/settings.xml)
[loweralpha]
.. Locate or create the <servers> section inside the file.
.. Add the following entry, replacing youruser and yourpassword with the credentials provided by Atina:

[source,xml]
----
<server>
    <id>atina-central</id>
    <username>youruser</username>
    <password>yourpassword</password>
</server>
----
=== Adding Atina JDE license to your Mule runtime

The _Atina JDE Connector_ requires a valid license file. You can provide the license in one of the following ways:

* Place the license file in your project folder under _src/main/resources_.
* Or, copy the license file to the Mule installation directory under _MULE_HOME/conf_.


== *AnyPoint Studio Project - _Atina JDE Connector_*

NOTE: It is recommended that you update AnyPoint Studio before starting with a _Atina JDE Connector_ project.

=== Using the Connector

You can use the connector to

* Log into _JD Edwards EnterpriseOne™_
* Invoke Web Services (WS) on the server by passing it parameters.
* Invoke a Business Function (BSFN) on the server by passing it parameters.
* Invoke a Business Function (BSFN) on the server using Transaction Processing.
* Invoke a UBE by name.
* Check a UBE call’s status asynchronously.
* MBF Poll Events.
* Log out.

=== Creating a new Mule Project 

Create a new Mule Project with Mule Server 4.6.0 EE or greater as runtime:

image::atina_connector_images/jde_02_muleprj.png[width=521,align=center]

=== Project Dependencies

To include the Atina JDE Connector in your Mule application, update your pom.xml file with the following configuration:

=== Repository Configuration

Add the Atina Repository to the <repositories> section:

[source,xml]
----
<repository>
    <id>atina-central</id>
    <name>libs-release</name>
    <url>https://jfrog.atina-connection.com/artifactory/libs-release</url>
</repository>
----

=== Dependency Declaration

Then, include the connector dependency in the <dependencies> section:

[source,xml]
----
<dependency>
    <groupId>com.atina-connection</groupId>
    <artifactId>mule-jde-atina-connector</artifactId>
    <version>3.0.0</version>
    <classifier>mule-plugin</classifier>
</dependency>
----

[NOTE]
====
Make sure to replace the version number with the latest available release if a newer one exists.
====

=== Other Considerations

To redirect the _JD Edwards EntrpriseOne™_ Logger to Mule Logger (allowing you to see the JDE activity in both Console and JDE files defined in the _jdelog.properties_, you may add the following _Async Loggers_ to _log4j2.xml_ file.
[source,java]
----
<AsyncLogger name="org.mule.modules.jde=" level="DEBUG" />
----
=== Troubleshooting

If you are experiencing issues resolving all project dependencies, follow these steps:

. Close Anypoint Studio completely.
. From the project root directory, run the following command in your terminal or command prompt:

[source,bash]
----
mvn clean package
----

[NOTE]
====
This process ensures that Maven updates the local cache and properly indexes the project upon reopening.
====

==== Additional Tips

If the issue persists:

. Force Maven to update all snapshots and releases:

[source,bash]
----
mvn clean package -U
----

. Delete the local repository cache (⚠️ this will require re-downloading all dependencies):

[source,bash]
----
rm -rf ~/.m2/repository
----

. After clearing the cache, rerun the build:

[source,bash]
----
mvn clean package
----

[start=3]
. Reopen Anypoint Studio and verify that all dependencies are now resolved.

=== Configure the *Global Element*

To use the Atina JDE Connector in your Mule application, you must first define a global configuration element. This element provides the connection details required to interact with JD Edwards EnterpriseOne™ through the connector.

Follow these steps:

* Create a ne  Mule flow file (e.g., demo-jde-config.xml.xml).
* Open this new Mule flow file.
* Click the Global Elements tab located at the bottom of the editor window.

image::atina_connector_images/jde_03_Config01.png[width=521,opts=border,align=center]

* Click the Create button.

image::atina_connector_images/jde_03_Config02.png[width=521,opts=border,align=center]

* In the dialog that appears, type JDE in the search box or navigate to Connector Configuration and select JDE Atina Config. Then click OK.

image::atina_connector_images/jde_03_Config03.png[width=521,opts=border,align=center]

* Fill in the required fields under the General tab:

•	*User*: JDE user account (e.g., JDE)
•	*Password*: Password for the JDE user
•	*Environment*: JDE environment (e.g., JDVE920)
•	*Role*: JDE role (e.g., *ALL)
•	*WS Connection*: Set to True if you will invoke Web Services; otherwise, set to False for BSFN, UBE operations or Poll Events.
•	*Microservice Name or IP*: IP address or hostname of the JD Atina Microservice
•	*Microservice Port*: Port used by the microservice

image::atina_connector_images/jde_03_Config04.png[width=521,opts=border,align=center]

* Click Test Connection to verify that the connector can successfully reach the microservice and validate the credentials.

If successful, you will see the following confirmation message:

image::atina_connector_images/jde_03_Config05.png[width=521,opts=border,align=center]

Once confirmed, click OK to save the global configuration.

*Optional*: Create a Second Configuration for Non Web Services Operations

If you also plan to execute non-Web Service operations (such as BSFN, UBE Execution, or MBF Events) using the same connector, you must create an additional global configuration where the WS Connection field is set to False.

image::atina_connector_images/jde_03_Config06.png[width=521,opts=border,align=center]

To do this:

. Repeat the steps above to create a new configuration.
. Choose a different name for the global element (e.g., JDE_Atina_Config_for_BSFN).
. Set WS Connection to False.
. Keep the remaining connection values consistent with your environment.

This approach allows you to define and use multiple configurations within the same project, referencing the appropriate one depending on the type of operation.

=== Invoking a *JDE Web Services*

From the following RAML definition, we will build an endpoint that invokes the JDE Web Service `oracle.e1.bssv.JP010000.AddressBookManager.getAddressBook`.

==== RAML Definition

[source,yaml]
----
#%RAML 1.0
title: ATINA JDE Connector
version: v1

/v1:
  /getAdressBookUsingWS:
    get:
      description: >
        Get Address Book using Web Service
        JP010000 AddressBookManager method getAddressBook.
      queryParameters:
        entityID:
          displayName: Address Book No
          type: string
          required: true
      responses:
        200:
          description: OK
          body:
            application/json:
              example: |
                {
                }
----

Based on this RAML, the following endpoint will be exposed:

[source,http]
----
GET /v1/getAdressBookUsingWS?entityID=28
----

==== Creating a HTTP Listener from RAML

This section explains how to generate a fully configured **HTTP Listener** and the corresponding flows in *Anypoint Studio*, using a RAML file stored in your project’s `src/main/resources` folder.

image::atina_connector_images/jde_04_RAML01.png[width=521,opts=border,align=center]


. Create the file `demo-jde-atina-connector.raml` under the directory `src/main/resources/api` or a similar path.
. Paste the RAML definition described in the previous section into this file.
. Right-click on the RAML file and select:
+
`Mule → Generate Flows from Local REST API…`

This option will automatically:

* Parse the RAML structure.
* Generate a set of flows corresponding to each HTTP method and resource.
* Create a global **HTTP Listener Configuration** if one does not already exist.

Inside this file, write the previous RAML Definition.

**Right-click** the RAML file and navigate to:
`*Mule* → *Generate Flows from Local REST API*…`

Once the generation is complete:

* A flow will be created for each RAML endpoint.
* A listener will be configured to expose them on the specified base path and port.

image::atina_connector_images/jde_04_RAML02.png[width=521,opts=border,align=center]

[NOTE]
====
This method provides a quick and consistent way to align your Mule flows with the API contract defined in the RAML.
All examples in this manual are generated using this approach.
====

==== Invoke Web Service operation

To invoke a JDE Web Service using the Atina JDE Connector, follow the steps below:

===== 1. Add the Connector to the Flow

From the *Mule Palette*, locate the **JDE Atina** module and drag the `Invoke ws` operation onto the flow canvas.
 
image::atina_connector_images/jde_05_WS01.png[width=521,align=center]

From the Mule Palette (typically top right), Locate the *Atina JDE Connector*, and select *Invoke ws*.

Once the operation is placed, select it and review the configuration panel on the right.

* Change the **Display Name** to something meaningful, such as `Invoke WS Address Book Manager`.
* In the **Basic Settings**, select the appropriate connector configuration (e.g. `JDE_Atina_Config_for_Web_Services`).

image::atina_connector_images/jde_05_WS02.png[width=521,align=center]

===== 2. Select the Web Service to Invoke

Under the *General* section, locate the field labeled **Ws name**.
Click the dropdown icon to retrieve the available Web Services from the microserver.

image::atina_connector_images/jde_05_WS03.png[width=521,align=center]

From the list, choose: *oracle.e1.bssv.JP010000.AddressBookManager.getAddressBook*

This metadata is fetched directly from the running microserver instance and stored in your project metadata.

===== 3. Set the Input Parameters

You can now configure the input parameters using DataWeave or the graphical mapping interface.

Click the fx icon next to **Input parameters**, and use either:

* Manual expression:
+
[source,json]
----
{
  entity: {
    entityId: attributes.queryParams.entityID as Number
  }
}
----

* Or graphical mapping: drag `attributes.queryParams.entityID` to `entity.entityId`.

image::atina_connector_images/jde_05_WS04.png[width=521,align=center] 

===== 4. Add a Transform Message (Optional)

After the WS invocation, you can format the response.

From the *Mule Palette*, search for **Transform Message** and drag it next to the connector.
This will allow you to format the output as needed, such as converting it to `application/json`.

image::atina_connector_images/jde_05_WS05.png[width=521,align=center]

Typical output for passthrough:

[source,datweave]
----
%dw 2.0
output application/json
---
payload
----

===== 5. Run and Test the Flow

Start your Mule application using the **Run** button or `Run → Run Project`.

Once deployed, you can test the endpoint using the **API Console** or an HTTP client such as `curl` or Postman.

image::atina_connector_images/jde_05_WS06.png[width=521,align=center]
image::atina_connector_images/jde_05_WS07.png[width=521,align=center]

You should receive a `200 OK` response with the `addressBookResult` in JSON format.

[NOTE]
====
The WS operation is executed dynamically by the microservice. If the service is not available or misconfigured, you will receive a `500 Internal Server Error`.
Always ensure your `.env` file and connector configuration are correctly set.
====

=== Invoking a *Business Function (BSFN)*

Just as we did with Web Services, we start from a **RAML** contract and generate a Mule endpoint that calls a JDE Business Function (BSFN).
In this example we invoke **`AddressBookMasterMBF`** to retrieve Address Book information.

==== RAML Definition

[source,yaml]
----
#%RAML 1.0
title: ATINA JDE Connector
version: v1

/v1:
...
  /getAdressBookUsingBSFN:
    get:
      description: Get Address Book using BSFN AddressBookMasterMBF .
      queryParameters:
        entityID:
          displayName: Address Book No
          type: string
          required: true
      responses:
        200:
          description: OK
          body:
            application/json:
              example: |
                {
                }

----

Based on this RAML, the following endpoint will be exposed:

[source,http]
----
GET /v1/getAdressBookUsingBSFN?entityID=28
----

==== Configure the BSFN Invocation

To invoke the BSFN in your Mule flow, follow the same initial steps explained in the section *Creating a HTTP Listener from RAML*.

image::atina_connector_images/jde_06_BSFN01.png[width=521,align=center]

To invoke a JDE BSFN using the Atina JDE Connector, follow the steps below:

===== 1. Add the Connector to the Flow

From the *Mule Palette*, locate the **JDE Atina** module and drag the `Invoke bsfn` operation onto the flow canvas.

Once the operation is placed, select it and review the configuration panel on the right.

* Change the **Display Name** to something meaningful, such as `Invoke BSFN MBSFN Address Book`.
* In the **Basic Settings**, select the appropriate connector configuration (e.g. `JDE_Atina_Config_Non_WS_Operation`).

image::atina_connector_images/jde_06_BSFN02.png[width=521,align=center]

===== 2. Select the BSFN to Invoke

Under the *General* section, locate the field labeled **Ws name**.
Click the dropdown icon to retrieve the available BSFN from the microserver.

image::atina_connector_images/jde_06_BSFN03.png[width=521,align=center]

From the list, choose: *AddressBookMasterMBF*

This metadata is fetched directly from the running microserver instance and stored in your project metadata.

===== 3. Set the Input Parameters

You can now configure the input parameters using DataWeave or the graphical mapping interface.

Click the fx icon next to **Input parameters**, and use either:

* Manual expression:
+
[source,json]
----
{
	cActionCode: 'I',
	cSuppressErrorMessages: '1',
	szVersion: 'ZJDE0001',
	mnAddressBookNumber: attributes.queryParams.entityID as Number
}
----

* Or graphical mapping: drag `attributes.queryParams.entityID` to `mnAddressBookNumber`.

image::atina_connector_images/jde_05_WS04.png[width=521,align=center]

===== 4. Add a Transform Message (Optional)

After the WS invocation, you can format the response.

From the *Mule Palette*, search for **Transform Message** and drag it next to the connector.
This will allow you to format the output as needed, such as converting it to `application/json`.

image::atina_connector_images/jde_06_BSFN04.png[width=521,align=center]

Typical output for passthrough:

[source,datweave]
----
%dw 2.0
output application/json
---
payload
----

===== 5. Run and Test the Flow

Start your Mule application using the **Run** button or `Run → Run Project`.

Once deployed, you can test the endpoint using the **API Console** or an HTTP client such as `curl` or Postman.

image::atina_connector_images/jde_06_BSFN05.png[width=521,align=center]
image::atina_connector_images/jde_06_BSFN06.png[width=521,align=center]

You should receive a `200 OK` response with the JSON format.

[NOTE]
====
The BSFN operation is executed dynamically by the microservice. If the service is not available or misconfigured, you will receive a `500 Internal Server Error`.
Always ensure your `.env` file and connector configuration are correctly set.
====

=== Invoking a *Business Function (BSFN)* with *Transaction Processing*

This use case example will reuse the previous flow to add a Customer. In this case, we will need to invoke two Master Business Function (MBF) on Oracle’s JDE EnterpriseOne Server in the same transaction.

Just as we did with BSFN, we start from a **RAML** contract and generate a Mule endpoint that create a Customer using BSFN.
In this example we add **`MBFCustomerMaster`** to create Address Book and Customer information.

==== RAML Definition

[source,yaml]
----
#%RAML 1.0
title: ATINA JDE Connector
version: v1

/v1:
...
  /createCustomerUsingBSFNs:
    post:
      description: Create Customer using BSFN AddressBookMasterMBF and MBFCustomerMaster.
      body:
        application/json:
          type: |
            {
              "type": "object",
              "properties": {
                "customerName": {
                  "type": "string",
                  "displayName": "Customer Name"
                },
                "customerAddress": {
                  "type": "string",
                  "displayName": "Customer Address"
                },
                "customerCity": {
                  "type": "string",
                  "displayName": "Customer Address"
                },
                "customerState": {
                  "type": "string",
                  "displayName": "Customer Address"
                },
                "paymentCurrency": {
                  "type": "string",
                  "displayName": "Payment Currency",
                  "pattern": "^[A-Z]{3}$",
                  "description": "3-letter currency code (e.g., USD, EUR, ARS)"
                }
              }
            }
          example: |
            {
              "customerName": "John Doe",
              "customerAddress": "123 Main St",
              "customerCity": "Denver",
              "customerState": "CO",
              "paymentCurrency": "USD"
            }
      responses:
        200:
          description: OK
          body:
            application/json:
              example: |
                {
                  "status": "Customer created successfully",
                  "customerId": "12345"
                }

----

Based on this RAML, the following endpoint will be exposed:

[source,http]
----
POST /v1/createCustomerUsingBSFNs
{
  "customerName": "John Doe",
  "customerAddress": "123 Main St",
  "customerCity": "Denver",
  "customerState": "CO",
  "paymentCurrency": "USD"
}
----

==== Configure the BSFN Create Customer Invocation

To invoke the BSFN in your Mule flow, follow the same initial steps explained in the section *Creating a HTTP Listener from RAML*.

image::atina_connector_images/jde_06_BSFN01.png[width=521,align=center]

To invoke a JDE BSFN using the Atina JDE Connector, follow the steps below:

===== 1. Add the Two BSFN Connector to the Flow

Add the two BSFN

image::atina_connector_images/jde_07_TRANS01.png[width=521,align=center]

Invoke BSFN Create Address Book

[source,xml]
----
<jdeatina:invoke-bsfn wsName="AddressBookMasterMBF" doc:name="Invoke BSFN Create Address Book" config-ref="JDE_Atina_Config_Non_WS_Operation" target="addressBookRecord">
<jdeatina:input-parameters><![CDATA[#[output application/json
---
{
cActionCode: 'A',
cUpdateMasterFile: '1',
cSuppressErrorMessages: '1',
szVersion: 'ZJDE0001',
mnAddressBookNumber: 0,
szSearchType: 'C',
szAlphaName: payload.customerName,
szMailingName: payload.customerName,
szBusinessUnit: '           1',
szAddressLine1: payload.customerAddress,
szAddressLine2: '',
szAddressLine3: '',
szAddressLine4: '',
szCity: payload.customerCity,
szState: payload.customerState,
cPayablesYNM: 'N',
cReceivablesYN: 'Y',
cARAPNettingY: 'N',
cIndicatorFlg: 'A'
}]]]></jdeatina:input-parameters>
</jdeatina:invoke-bsfn>
----
Invoke BSFN Create Customer

[source,xml]
----
<jdeatina:invoke-bsfn doc:name="Invoke BSFN Create Customer" doc:id="0c65eb38-ecd4-4777-96fd-a00b8911c5f4" config-ref="JDE_Atina_Config_Non_WS_Operation" wsName="MBFCustomerMaster" target="customerRecord">
<jdeatina:input-parameters ><![CDATA[#[output application/json
---
{
cActionCode: 'A',
cUpdateMasterFile: '1',
szVersion: 'ZJDE00002',
szCompany: '00000',
szCurrencyCodeFrom: payload.paymentCurrency,
szTaxArea1: 'DEN',
szTaxExplanationCode1: 'S',
mnAmountCreditLimit: 200000,
szPaymentTermsAR: '',
szCurrencyCodeAmounts: payload.paymentCurrency,
mnAmountHighBalance: 300000,
cBatchProcessingMode: '',
mnCustomerNumber: vars.addressBookRecord.mnAddressBookNumber,
cPersonCorporationCode: '',
szVersionconsolidated: 'ZJDE00002',
DateEntered: |2025-07-15T14:00:00-03:00|
}]]]></jdeatina:input-parameters>
</jdeatina:invoke-bsfn>
----

Transform Message. Set response.

[source,xml]
----

<ee:transform doc:name="Transform Message">
<ee:message>
<ee:set-payload><![CDATA[%dw 2.0
output application/json
---
{
status: "Customer created successfully",
customerId: vars.addressBookRecord.mnAddressBookNumber as String
} ]]></ee:set-payload>
</ee:message>
</ee:transform>
----

===== 2. Wrap this Operation with Transaction

From the *Mule Palette*, locate the **JDE Atina** module and drag the `Transaction` operation onto the flow canvas.

Once the operation is placed, select it and review the configuration panel on the right.

* Change the **Display Name** to something meaningful, such as `Transaction - Start`.
* In the **Basic Settings**, select the appropriate connector configuration (e.g. `JDE_Atina_Config_Non_WS_Operation`).
* Under the *General* section, locate the field labeled **Transaction operation**.
* From the list, choose: *Start Transaction*. This metadata is fetched directly from the running microserver instance and stored in your project metadata.

image::atina_connector_images/jde_07_TRANS02.png[width=521,align=center]

===== 3. Set the Input Parameters for Transaction operation

You can now configure the input parameters using DataWeave or the graphical mapping interface.

Click the fx icon next to **Input parameters**, and use either:

* Manual expression:
+
[source,json]
----
{
}
----

* Or graphical mapping: drag `attributes.queryParams.entityID` to `mnAddressBookNumber`.

image::atina_connector_images/jde_07_TRANS03.png[width=521,align=center]

Assing the payload to a variable

image::atina_connector_images/jde_07_TRANS04.png[width=521,align=center]

===== 4. Assign the transaction ID to BSFNs

image::atina_connector_images/jde_07_TRANS05.png[width=521,align=center]

image::atina_connector_images/jde_07_TRANS06.png[width=521,align=center]

===== 5. Close Transaction with Commit and Rollback

image::atina_connector_images/jde_07_TRANS07.png[width=521,align=center]

Commit Transaction

[source,xml]
----
<jdeatina:transaction transactionOperation="Commit Transaction" doc:name="Transaction - Commit" config-ref="JDE_Atina_Config_Non_WS_Operation" target="commit">
			<jdeatina:input-parameters ><![CDATA[#[output application/java
---
{
	"Transaction ID": vars.transaction."Transaction ID"
}]]]></jdeatina:input-parameters>
		</jdeatina:transaction>
----

Rollback Transaction

[source,xml]
----
<error-handler >
			<on-error-propagate enableNotifications="true" logException="true" doc:name="On Error Propagate"
                when='#[vars.transaction."Transaction ID" != 0]'>
				<jdeatina:transaction transactionOperation="Rollback Transaction" doc:name="Transaction - Rollback" doc:id="9dea4c9a-1158-4de6-bd52-b427cf2f244e" config-ref="JDE_Atina_Config_Non_WS_Operation" target="commit" >
					<jdeatina:input-parameters ><![CDATA[#[output application/java
---
{
	"Transaction ID": vars.transaction."Transaction ID"
}]]]></jdeatina:input-parameters>
				</jdeatina:transaction>
			</on-error-propagate>
		</error-handler>
----

===== 6. Run and Test the Flow

Start your Mule application using the **Run** button or `Run → Run Project`.

Once deployed, you can test the endpoint using the **API Console** or an HTTP client such as `curl` or Postman.

image::atina_connector_images/jde_07_TRANS08.png[width=521,align=center]

You should receive a `200 OK` response with the JSON format.

[NOTE]
====
The BSFN operation is executed dynamically by the microservice. If the service is not available or misconfigured, you will receive a `500 Internal Server Error`.
Always ensure your `.env` file and connector configuration are correctly set.
====

=== Submit an *UBE* and an *UBE State*

Just as we did with Web Services, we start from a **RAML** contract and generate a Mule endpoint that submit UBEs.
In this example we invoke **`R01010Z-ZJDE0001`**  Address Book Batch Upload.

==== RAML Definition

[source,yaml]
----
#%RAML 1.0
title: ATINA JDE Connector
version: v1

/v1:
...
  /submitUBER01010Z:
    post:
      description: Sumbit UBE R01010Z-ZJDE0001 Address Book Batch Upload.
      body:
        application/json:
          type: |
            {
              "type": "object",
              "properties": {
                "PO_ProcessMode": {
                  "type": "string",
                  "pattern": "^[0,1]{1}$",
                  "displayName": "Process Mode",
                  "description": "Blank = Proof mode  or 1 = Final mode"
                },
                "DataSelection_EDUS": {
                  "type": "string",
                  "displayName": "EDUS User Transaction"
                }
              }
            }
          example: |
            {
              "PO_ProcessMode": "0",
              "DataSelection_EDUS": "JDE"
            }
      responses:
        200:
          description: OK
          body:
            application/json:
              example: |
                {
                  "status": "UBE Submited",
                  "jobId": "12345"
                }

----

Based on this RAML, the following endpoint will be exposed:

[source,http]
----
POST /v1/submitUBER01010Z
{
  "PO_ProcessMode": "0",
  "DataSelection_EDUS": "JDE"
}
----

==== Configure the UBE Invocation

To invoke the BSFN in your Mule flow, follow the same initial steps explained in the section *Creating a HTTP Listener from RAML*.

image::atina_connector_images/jde_08_UBE01.png[width=521,align=center]

To invoke a JDE UBE using the Atina JDE Connector, follow the steps below:

===== 1. Add the UBE Connector to the Flow

From the *Mule Palette*, locate the **JDE Atina** module and drag the `Submit batch process` operation onto the flow canvas.

Once the operation is placed, select it and review the configuration panel on the right.

* Change the **Display Name** to something meaningful, such as `Submit Batch Upload`.
* In the **Basic Settings**, select the appropriate connector configuration (e.g. `JDE_Atina_Config_Non_WS_Operation`).

image::atina_connector_images/jde_08_UBE02.png[width=521,align=center]

===== 2. Select the UBE to Invoke

Under the *General* section, locate the field labeled **Ube name**.
Write UBE and Version

image::atina_connector_images/jde_08_BSFN03.png[width=521,align=center]

This metadata is fetched directly from the running microserver instance and stored in your project metadata.

===== 3. Set the Input Parameters

You can now configure the input parameters using DataWeave or the graphical mapping interface.

Report Interconnect and Processing Options are optional. In case you enter one value, this value will override the existing value.
For example, Processing Options has two parameters. In this case, we will override only Proof Mode. The version will mantein the current value in the UBE version.
The same logic will apply to Report Interconnect.
In this example will use PO and Data Selection.
To write Data Selection please see Anexo  Defining Data Selection

Click the fx icon next to **Input parameters**, and use either:

* Manual expression:
+
[source,json]
----
{
	"Processing Options": {
		cProofFinalFlag: payload.PO_ProcessMode
	},
	"Data Selection": "F0101Z2.EDUS = '" ++ (payload.DataSelection_EDUS as String) ++ "' AND F0101Z2.EDTN>'001'"
}
----

* Or graphical mapping: drag `attributes.queryParams.entityID` to `mnAddressBookNumber`.

image::atina_connector_images/jde_08_BSFN04.png[width=521,align=center]

Assing the response to a variable

image::atina_connector_images/jde_08_BSFN05.png[width=521,align=center]

===== 4. Add the Get Batch Process Information Connector to the Flow

From the *Mule Palette*, locate the **JDE Atina** module and drag the `Get batch process information` operation onto the flow canvas.

Once the operation is placed, select it and review the configuration panel on the right.

* Change the **Display Name** to something meaningful, such as `Get Batch Status`.
* In the **Basic Settings**, select the appropriate connector configuration (e.g. `JDE_Atina_Config_Non_WS_Operation`).

image::atina_connector_images/jde_08_BSFN06.png[width=521,align=center]

===== 5. Set the Input Parameters

You can now configure the input parameters using DataWeave or the graphical mapping interface.

Click the fx icon next to **Input parameters**, and use either:

* Manual expression:
+
[source,json]
----
output application/java
---
{
	"JOB Number": vars.ubeSubmited."JOB Number" as String
}
----

* Or graphical mapping: drag `attributes.queryParams.entityID` to `mnAddressBookNumber`.

image::atina_connector_images/jde_08_BSFN07.png[width=521,align=center]

Assing the response to a variable

image::atina_connector_images/jde_08_BSFN08.png[width=521,align=center]

===== 6. Add a Transform Message

After the WS invocation, you can format the response.

From the *Mule Palette*, search for **Transform Message** and drag it next to the connector.
This will allow you to format the output as needed, such as converting it to `application/json`.

image::atina_connector_images/jde_08_BSFN09.png[width=521,align=center]

Typical output for passthrough:

[source,datweave]
----
%dw 2.0
output application/json
---
{
	status: "UBE submite with ID " ++ (vars.ubeSubmited."JOB Number" as String) ,
	jobId: vars.getStatus."JOB Status"
}
----

===== 7. Run and Test the Flow

Start your Mule application using the **Run** button or `Run → Run Project`.

Once deployed, you can test the endpoint using the **API Console** or an HTTP client such as `curl` or Postman.

image::atina_connector_images/jde_08_BSFN10.png[width=521,align=center]


You should receive a `200 OK` response with the JSON format.

This is the JDE detail

image::atina_connector_images/jde_08_BSFN11.png[width=521,align=center]
image::atina_connector_images/jde_08_BSFN12.png[width=521,align=center]
image::atina_connector_images/jde_08_BSFN13.png[width=521,align=center]

=== Capture *MBF Outbound Events*


== *Atina JDE Connector_ – Demo Applications*

=== Example Project

You can download the example source that was created in the Getting Started Guide from

=== Additional Demos

There are additional demo applications with step by step guides available for download. These cover all the basic operations, and are :

. <<jde.adoc#,Invoke a Business Function with Transaction Processing>>
. <<demo_ube.adoc#,Submit a Batch Process>> 
. <<demo_ube_status.adoc#,Retrieve a Batch Process’s Status>>
. <<demo_poll_mbf_events.adoc#,Poll MBF Events>>
. <<demo_poll_edi_events.adoc#,Poll EDI Events>>

== *Appendix A : Required JARs by Tools Release*

=== Tools Release 8.98



=== Tools Releases 9.1 prior Update 4



=== Tools Releases 9.1 Update 4 and later updates



=== Tools Releases 9.2 and later


 
== *Appendix B : Additional Information*

=== Common Call Business Function parameters

There is four common parameters used to invoke a Business Function:

|===
|*Parameter*|*Input/Output*|*Type*|*Description*
|_BSFNThrowExceptionWithErrorsYN
|Input
|STRING
|Values: Y, The flow will throw Runtime Exception with cause: org.mule.modules.jde.exceptions.CallBSFNException.

|_BSFNReturnCode
|Output
|INTEGER
|Values: 0: Processed Correctly, 1: There is warnings, 2: There is errors.

|_BSFNNumberOfErrors
|Output
|INTEGER
|Number of errors

|_BSFNDetailErrors
|Output
|STRING
|Detail of the error. It return a XML representation of CallObjectErrorList
|===

Usage :

=== Handling Errors 

In Mule 4, all thrown errors  will be displayed in the _Type_ selection of the Error Handler. Simple select the errors you want to handle, and process them. 

NOTE : All JD Edwards related errors will start with _JDE:_

image:demo_getting_started/image1_ctl.png[image,width=563,height=446]

This is an example of CallObjectErrorItem object:
[source,xml]
<com.jdedwards.system.kernel.JdeNetCallObjectErrorList>
  <mErrors>
    <com.jdedwards.system.kernel.CallObjectErrorItem>
      <mErrorId>0</mErrorId>
      <mDDItem>1212</mDDItem>
      <mLineNumber>315</mLineNumber>
      <mFileName>b0100094.c</mFileName>
      <mSubText>&#x0;</mSubText>
      <mAlphaDescription>Error: Address Number Already Assigned</mAlphaDescription>
      <mGlossaryText>CAUSE . . . .  The Address Number entered is already assigned.&#xd;
       RESOLUTION. .  Enter an Address Number that is not already assigned.&#xd;
      </mGlossaryText>
      <mErrorLevel>1</mErrorLevel>
    </com.jdedwards.system.kernel.CallObjectErrorItem>
    <com.jdedwards.system.kernel.CallObjectErrorItem>
      <mErrorId>11</mErrorId>
      <mDDItem>018A</mDDItem>
      <mLineNumber>544</mLineNumber>
      <mFileName>rtk_ddvl.c</mFileName>
      <mSubText>Search Type|Y|01|ST&#x0;</mSubText>
      <mAlphaDescription>Error: Y not found in User Defined Code 01 ST&#x0;</mAlphaDescription>
      <mGlossaryText>CAUSE . . . .  Search Type Y was not found in User Defined Code&#xd;
               for system 01 , type ST&#x0; .&#xd;
              RESOLUTION. .  Enter a valid Search Type or use Visual Assist to search&#xd;
               for a valid value.
      </mGlossaryText>
      <mErrorLevel>1</mErrorLevel>
    </com.jdedwards.system.kernel.CallObjectErrorItem>
  </mErrors>
  <mBsfnErrorCode>2</mBsfnErrorCode>
</com.jdedwards.system.kernel.JdeNetCallObjectErrorList>

=== Defining Data Selection

* The parameter _Selection_ is used to define UBE Data Selection.
* The sentence is similar to a WHERE clause of an SQL statement.
* The _Selection_ syntax is:
** table.column_name operator [value|table.column_name];
* The table must be a JDE table that belongs to the main view of the UBE.
* Column Name must be a JDE Data Item Alias.
* The following operators can be used in the _Selection_ :

[cols=",",options="header",]
|===
|Operator |Description
|= |Equal
|<> |Not equal
|<> |Not equal
|> |Greater than
|< |Less than
|>= |Greater than or equal
|⇐ |Less than or equal
|BETWEEN |Between an inclusive range
|NOT BETWEEN |Not Between an exclusive range
|IN |To specify multiple possible values for a column
|NOT IN |To exclude multiple possible values for a column
|===

* The values can be literals or other table columns.
* Literals can be String or Number
* The sentence can include the AND and/or the OR conditions
* To override the default precedence you need to use parenthesis as
** C1 AND (C2 OR C3)
** The sentence only accept one level of Parenthesis.

For example, this is a valid sentence because the maximum level of Parenthesis opened is 1.

_C1 AND (C2 OR C3) AND (C4 OR C5)_

otherwise, this is an invalid sentences because the maximum level of Parenthesis opened is 2.

C1 AND (C2 OR (C3 AND C4))

Examples:

[source,sql]
----
F4211.KCOO = '00001' AND F4211.DOCO > 10332
F4211.KCOO = '00001' AND F4211.DOCO >= 10332
F4211.KCOO = '00001' AND F4211.DOCO <= 10332
F4211.KCOO = '00001' AND F4211.DOCO <> 10332
F4211.KCOO = '00001' AND ( F4211.DCTO = 'SO' OR F4211.DCTO = 'SI' )
F4211.KCOO = '00001' AND F4211.DCTO IN ('SO','SI')
F4211.KCOO = '00001' AND F4211.DCTO NOT IN ('SO','SI')
F4211.KCOO = '00001' AND F4211.DOCO BETWEEN 1022 AND 400
F4211.KCOO = '00001' AND F4211.DOCO NOT BETWEEN 1022 AND 400
F4211.MCU = F4211.EMCU AND F4211.DOCO NOT BETWEEN 1022 AND 400
----


